# DRL-Autopilot

./: .gitignore  .gitmodules  build_px4_ros_com_clean.sh  clean_px4_future.sh  clean_px4_legacy.sh  fix_colcon_prefix.sh  generate_template_and_rebuild_ROS2.sh  readme.md  sim_gazebo_ros2.sh
dev_notes/: RL basics.md  dev_progress.md  ros2-px4.md  weekly_summary.md
dev_notes/paper/: literature review.md  paper_reading.md
ros2_workspace/src/custom_gazebo_plugins/: CMakeLists.txt  package.xml
ros2_workspace/src/custom_gazebo_plugins/include/: common.h  gazebo_ros_joint_motor.hpp  gazebo_ros_joint_pid_ctrl.hpp  gazebo_ros_motor_model.hpp
ros2_workspace/src/custom_gazebo_plugins/include/custom_gazebo_plugins/: gazebo_ros_joint_pid_ctrl.hpp
ros2_workspace/src/custom_gazebo_plugins/src/: gazebo_ros_joint_motor.cpp  gazebo_ros_joint_pid_ctrl.cpp  gazebo_ros_motor_model.cpp
ros2_workspace/src/drl_controller/: CMakeLists.txt  package.xml
ros2_workspace/src/drl_controller/src/: controller_main.cpp
ros2_workspace/src/training_room/: package.xml  setup.cfg  setup.py
ros2_workspace/src/training_room/training_room/: algo_sac.py  apm_gym_env.py  gz_gym_env.py  main.py  main_legacy.py
utilities/: m1_raisimCheckMyMachine
