<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drl_controller</name>
  <version>0.0.0</version>
  <description>Input=[traj_sp, UAV_state]; Output=[PWMs]</description>
  <maintainer email="yueqianliu@outlook.com">yueqian</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>

</package>
